force-app/main/default/objects/Deployment_Record__c/fields/Commit_SHA__c.field-meta.xml
<CustomField>
    <fullName>Commit_SHA__c</fullName>
    <label>Commit SHA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>