force-app/main/default/objects/Deployment_Record__c/fields/Deploy_Id__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Deploy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>