force-app/main/default/objects/Deployment_Record__c/fields/Deployed_At__c.field-meta.xml
<CustomField>
    <fullName>Deployed_At__c</fullName>
    <label>Deployed At</label>
    <type>DateTime</type>
</CustomField>