force-app/main/default/objects/Deployment_Record__c/fields/Repo_URL__c.field-meta.xml
<CustomField>
    <fullName>Repo_URL__c</fullName>
    <label>Repo URL</label>
    <type>Url</type>
</CustomField>