force-app/main/default/objects/Deployment_Record__c/fields/Total_Authors__c.field-meta.xml
<CustomField>
    <fullName>Total_Authors__c</fullName>
    <label>Total Authors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>