force-app/main/default/objects/Deployment_Record__c/fields/Total_PRs__c.field-meta.xml
<CustomField>
    <fullName>Total_PRs__c</fullName>
    <label>Total PRs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>